<resources>
    <string name="app_name">Login_system</string>
    <string name="welcome_back">Welcome back</string>
    <string name="sing_in_to_continue">sing in to continue</string>
    <string name="email_or_phone">Email or phone</string>
    <string name="passowrd">Passowrd</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">Login</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="dont_t_have_account">Dont\'t have account?</string>
    <string name="create_new_n_account">Create new \n Account</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="retype_your_password">Retype your password</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="sing_up">Sing Up</string>
    <string name="already_registered_t_login">Already Registered? \t Login</string>
    <string name="add">add</string>
    <string name="lorem_ipsum">lorem_ipsum</string>
    <string name="lorem_ipsum_text">lorem_ipsum_Text</string>
    <string name="title">Title</string>
    <string name="note_text">Note Text</string>
    <string name="welcome_to_your_n_favourite_note">Welcome To your \n Favourite Note</string>
</resources>